# web-dev-apply-skills

./: .gitignore  README.md  app.py  auth.py  database.py  pyproject.toml  test_app.py
artifacts/: implementation_plan.md  task.md  walkthrough.md
db/: schema.sql
instruction/: prd.md
report/: netlify_deployment_guide.md  review_report.md  sqlite_to_postgres_migration.md  supabase_deployment_guide.md  vercel_deployment_guide.md
static/css/: reset.css  style.css  variables.css
static/js/: api.js  main.js
templates/: base.html  index.html  login.html  register.html
tests/: test_e2e.py
