[project]
name = "insta-lite"
version = "0.1.0"
description = "A lightweight Instagram clone for workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1.2",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.0.post1",
    "passlib[bcrypt]>=1.7.4"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "playwright>=1.41.0"
]
